[package]
name = "rust-todo"
version = "0.1.0"
authors = ["RyuNen344 <s1100633@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.6"
actix-web = "1.0.9"
actix-files = "0.1.7"
actix-session = "0.2.0"

futures = "0.3.1"
log = "0.4.0"
env_logger = "0.7.1"
bytes = "0.5.2"